Folder distribution just change

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ composer.phar
 /client/build
 
 ### Static assets
-/App/public/images/*
-/App/public/videos/*
+/server/public/images/*
+/server/public/videos/*
 
 # Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
